--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "devDependencies": {
         "@adobe/ccweb-add-on-scripts": "^1.3.0",
         "@adobe/ccweb-add-on-sdk-types": "^1.3.0"
+    },
+    "dependencies": {
+        "bad-words": "^4.0.0",
+        "openai": "^4.65.0",
+        "profanity-filter": "^0.2.1"
     }
 }
