--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "bad-words": "^4.0.0",
+        "dotenv": "^16.4.5",
         "openai": "^4.65.0",
         "profanity-filter": "^0.2.1"
     }
